# Lume_browser

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LUME_TZ.md  PACKAGING.md  README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: build-android.yml  build-windows.yml
apps/android/: README.md
apps/ios/: README.md
apps/macos/: README.md
apps/windows/: README.md
apps/windows/installers/x86_64/: Lume_0.1.0_x64-setup.exe.sig  Lume_0.1.0_x64_en-US.msi.sig  latest.json
crates/lume_engine/: Cargo.toml
crates/lume_engine/src/: cache.rs  document.rs  history.rs  lib.rs  navigation.rs  network.rs  parser.rs  security.rs
scripts/: build-android.ps1  build-ios.sh  build-macos.sh  build-windows.ps1
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_updates.rs  lib.rs  main.rs  network_fetcher.rs  tabs_manager.rs
src-tauri/src/platform/: android.rs  ios.rs  macos.rs  mod.rs  windows.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: CommandBar.tsx  SettingsPanel.tsx  Sidebar.tsx  Titlebar.tsx  UpdateButton.tsx
src/components/browser/: BrowserViewport.tsx  InternalPage.tsx  NativeWebviewHost.tsx  NewTabPage.tsx  PageLoadGuard.tsx
src/lib/: preferences.ts  tauri.ts  webview-utils.ts
src/types/: preferences.ts  tabs.ts
