[package]
name = "lume"
version = "0.1.0"
description = "Lume browser shell"
authors = ["Lume Contributors"]
edition = "2021"
rust-version = "1.85"

[lib]
name = "lume_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
lume_engine = { path = "../crates/lume_engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tauri = { version = "2.0.0", features = ["unstable"] }
tauri-plugin-opener = "2.0.0"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"
