[package]
name = "lume_engine"
version = "0.1.0"
description = "Shared browser engine core for Lume platform shells"
authors = ["Lume Contributors"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "rustls-tls"] }
scraper = "0.26"
serde = { version = "1", features = ["derive"] }
url = "2.5"
